--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -1,6 +1,3 @@
-# This workflow will build a .NET project
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-net
-
 name: .NET
 
 on:
@@ -10,12 +7,11 @@ on:
     branches: [ "*" ]
 
 env:
-  SOLUTION_PATH: '${{ github.workspace }}/CalculationEngine/CalculationEngine/'
+  DOTNET_PATH: './CalculationEngine/CalculationEngine/'
   CONFIGURATION: 'Release'
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
@@ -26,16 +22,16 @@ jobs:
         dotnet-version: 7.0.x
         
     - name: Restore dependencies
-      run: dotnet restore ${{ env.SOLUTION_PATH }}        
+      run: dotnet restore ${{ env.DOTNET_PATH }}        
       
     - name: Build
-      run: dotnet build ${{ env.SOLUTION_PATH }} --no-restore -C ${{ env.CONFIGURATION}}
+      run: dotnet build ${{ env.DOTNET_PATH }} --no-restore -C ${{ env.CONFIGURATION}}
       
     - name: Test
-      run: dotnet test ${{ env.SOLUTION_PATH }} --no-build --verbosity normal
+      run: dotnet test ${{ env.DOTNET_PATH }} --no-build --verbosity normal
 
     - name: Pack
-      run: dotnet pack ${{ env.SOLUTION_PATH }} --output ./artifacts -c ${{ env.CONFIGURATION}} -p:Version=$GITHUB_RUN_ID
+      run: dotnet pack ${{ env.DOTNET_PATH }} --output ./artifacts -c ${{ env.CONFIGURATION}} -p:Version=$GITHUB_RUN_ID
 
     - name: Upload Artifacts
       uses: actions/upload-artifact@v2
