--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -7,7 +7,7 @@ on:
     branches: [ "*" ]
 
 env:
-  DOTNET_PATH: ${{ github.workspace }}'./CalculationEngine/CalculationEngine/'
+  DOTNET_PATH: ${{ github.workspace }}'/CalculationEngine/CalculationEngine/'
   CONFIGURATION: 'Release'
 
 jobs:
