--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -31,7 +31,7 @@ jobs:
       run: dotnet test ${{ env.DOTNET_PATH }} --no-build --verbosity normal
 
     - name: Pack
-      run: dotnet pack ${{ env.DOTNET_PATH }} --output ./artifacts -c ${{ env.CONFIGURATION}} -p:Version=$GITHUB_RUN_ID
+      run: dotnet pack ${{ env.DOTNET_PATH }}/CalculationEngine.csproj --output ./artifacts -c ${{ env.CONFIGURATION}} -p:Version=$GITHUB_RUN_ID
 
     - name: Upload Artifacts
       uses: actions/upload-artifact@v2
