--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -9,6 +9,7 @@ on:
 env:
   DOTNET_PATH: ${{ github.workspace }}'/CalculationEngine/CalculationEngine/'
   CONFIGURATION: 'Release'
+  VERSION: '1.0.0'
 
 jobs:
   build:
@@ -31,7 +32,8 @@ jobs:
       run: dotnet test ${{ env.DOTNET_PATH }} --no-build --verbosity normal
 
     - name: Pack
-      run: dotnet pack ${{ env.DOTNET_PATH }}/CalculationEngine.csproj --output ./artifacts -c ${{ env.CONFIGURATION}} -p:Version=$GITHUB_RUN_ID
+      run: dotnet pack ${{ env.DOTNET_PATH }}/CalculationEngine.csproj --output ./artifacts -c ${{ env.CONFIGURATION}} -p:Version=${{ env.VERSION}}
+      #run: dotnet pack ${{ env.DOTNET_PATH }}/CalculationEngine.csproj --output ./artifacts -c ${{ env.CONFIGURATION}} -p:Version=$GITHUB_RUN_ID
 
     - name: Upload Artifacts
       uses: actions/upload-artifact@v2
