--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -57,7 +57,7 @@ jobs:
         dotnet-version: 7.0.x
 
     - name: Add package source
-      run: dotnet nuget add source https://nuget.pkg.github.com/robertath/index.json -n github -u robertath =p ${{ secrets.NUGETAPIKEY }} --store-password-in-clear-text
+      run: dotnet nuget add source https://nuget.pkg.github.com/robertath/index.json -n github -u robertath -p ${{ secrets.NUGETAPIKEY }} --store-password-in-clear-text
 
     - name: Publish
       run: dotnet nuget push ./nupkg/**.nupkg --source github --api-key ${{ secrets.NUGETAPIKEY }}
