fix publish error

--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -60,7 +60,7 @@ jobs:
       run: dotnet nuget add source https://nuget.pkg.github.com/robertath/index.json -n github -u robertath -p ${{ secrets.NUGETAPIKEY }} --store-password-in-clear-text
 
     - name: Publish
-      run: dotnet nuget push './nupkg/**.nupkg' --source 'https://nuget.pkg.github.com/robertath/index.json' --api-key ${{ secrets.NUGETAPIKEY }}
+      run: dotnet nuget push './nupkg/**.nupkg' --source 'https://nuget.pkg.github.com/${{ github.repository_owner }}' --api-key ${{ secrets.NUGETAPIKEY }} --skip-duplicate --no-symbols
 
 
 
