fix publish error

--- a/CalculationEngine/CalculationEngine/CalculationEngine.csproj
+++ b/CalculationEngine/CalculationEngine/CalculationEngine.csproj
@@ -5,6 +5,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
 	<GeneratePackageOnBuild>false</GeneratePackageOnBuild>
+	<RepositoryUrl>https://github.com/robertath/PackageManagement-Git</RepositoryUrl>
   </PropertyGroup>
 
 </Project>
