--- a/CalculationEngine/CalculationEngine/CalculationEngine.csproj
+++ b/CalculationEngine/CalculationEngine/CalculationEngine.csproj
@@ -5,6 +5,12 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
 	<GeneratePackageOnBuild>false</GeneratePackageOnBuild>
+	<OutputType>Library</OutputType>
+	<PackageId>CalculationEngine</PackageId>
+	<Version>1.0.0</Version>
+	<Authors>robertath</Authors>
+	<Company>Company Inc</Company>
+	<PackageDescription>This package for lab nuget package with git action!</PackageDescription>
 	<RepositoryUrl>https://github.com/robertath/PackageManagement-Git</RepositoryUrl>
   </PropertyGroup>
 
