--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -75,7 +75,7 @@ jobs:
     - name: NuGet push
       run: |
         dotnet nuget add source https://nuget.pkg.github.com/${{ github.repository_owner }}/index.json --name github --username ${{ github.repository_owner }} --password ${{ secrets.NUGETAPIKEY }} --store-password-in-clear-text
-        dotnet nuget push **/*.nupkg --source github
+        dotnet nuget push *.nupkg --source github
 
 
     
