--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -53,18 +53,33 @@ jobs:
       uses: actions/download-artifact@v1
       with: 
         name: nupkg
-    
-    - name: Setup .NET
-      uses: actions/setup-dotnet@v3
+
+    - name: Setup .NET environment
+      uses: actions/setup-dotnet@v1
       with:
-        dotnet-version: 7.0.x
+        dotnet-version: '7.0.x'
+        source-url: https://nuget.pkg.github.com/robertath/index.json
+      env:
+        NUGET_AUTH_TOKEN: ${{secrets.NUGETAPIKEY}}
 
     - name: Build with dotnet
-      run: dotnet build ${{ env.DOTNET_PATH }}/CalculationEngine.csproj --configuration ${{ env.CONFIGURATION }} --version-suffix prerelease-$(date +%Y%m%d%H%M%S)
+      run: dotnet build ${{ env.DOTNET_PATH }}/CalculationEngine.csproj --configuration ${{ env.CONFIGURATION }} 
       shell: bash
 
-    - name: Pack
-      run: dotnet pack ${{ env.DOTNET_PATH }}/CalculationEngine.csproj -c ${{ env.CONFIGURATION}} #--output ./artifacts -p:Version=${{ env.VERSION}}
+    - name: Generate a NuGet package
+      run: dotnet pack ${{ env.DOTNET_PATH }}/CalculationEngine.csproj -c ${{ env.CONFIGURATION}} -o .
+
+    - name: Push to GitHub package registry
+      run: dotnet nuget push *.nupkg
+      
+    # - name: Setup .NET
+    #   uses: actions/setup-dotnet@v3
+    #   with:
+    #     dotnet-version: 7.0.x
+
+
+    # - name: Pack
+    #   run: dotnet pack ${{ env.DOTNET_PATH }}/CalculationEngine.csproj -c ${{ env.CONFIGURATION}} #--output ./artifacts -p:Version=${{ env.VERSION}}
 
     # - name: Add package source
     #   run: dotnet nuget add source https://nuget.pkg.github.com/robertath/index.json -n github -u robertath -p ${{ secrets.NUGETAPIKEY }} --store-password-in-clear-text
@@ -72,10 +87,10 @@ jobs:
     # - name: Publish
     #   run: dotnet nuget push **/*.nupkg --source github --api-key ${{ secrets.NUGETAPIKEY }}
 
-    - name: NuGet push
-      run: |
-        dotnet nuget add source https://nuget.pkg.github.com/${{ github.repository_owner }}/index.json --name github --username ${{ github.repository_owner }} --password ${{ secrets.NUGETAPIKEY }} --store-password-in-clear-text
-        dotnet nuget push *.nupkg --source github
+    # - name: NuGet push
+    #   run: |
+    #     dotnet nuget add source https://nuget.pkg.github.com/${{ github.repository_owner }}/index.json --name github --username ${{ github.repository_owner }} --password ${{ secrets.NUGETAPIKEY }} --store-password-in-clear-text
+    #     dotnet nuget push *.nupkg --source github
 
 
     
