--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -49,10 +49,10 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@master
 
-    - name: Download Artifact
-      uses: actions/download-artifact@v1
-      with: 
-        name: nupkg
+    # - name: Download Artifact
+    #   uses: actions/download-artifact@v1
+    #   with: 
+    #     name: nupkg
 
     - name: Setup .NET environment
       uses: actions/setup-dotnet@v1
