--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -17,6 +17,7 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+
     - name: Setup .NET
       uses: actions/setup-dotnet@v3
       with:
@@ -61,19 +62,25 @@ jobs:
         source-url: https://nuget.pkg.github.com/robertath/index.json
       env:
         NUGET_AUTH_TOKEN: ${{secrets.NUGETAPIKEY}}
+    
+    - name: Setup NuGet
+      uses: NuGet/setup-nuget@v1.1.x
+
+    - name: Restore dependencies
+      run: dotnet restore ${{ env.DOTNET_PATH }}   
 
     - name: Build with dotnet
       run: dotnet build ${{ env.DOTNET_PATH }}/CalculationEngine.csproj --configuration ${{ env.CONFIGURATION }} 
       shell: bash
 
     - name: Generate a NuGet package
-      run: dotnet pack ${{ env.DOTNET_PATH }}/CalculationEngine.csproj -c ${{ env.CONFIGURATION}} -o .
+      run: dotnet pack ${{ env.DOTNET_PATH }}/CalculationEngine.csproj -c ${{ env.CONFIGURATION}} -o ./artifact
 
     - name: Add package source
       run: dotnet nuget add source https://nuget.pkg.github.com/robertath/index.json -n github -u robertath -p ${{ secrets.NUGETAPIKEY }} --store-password-in-clear-text
 
     - name: Push to GitHub package registry
-      run: dotnet nuget push *.nupkg --api-key ${{ secrets.NUGETAPIKEY }} --source github
+      run: dotnet nuget push ${{ env.DOTNET_PATH }}/bin/Release/*.nupkg --api-key ${{ secrets.NUGETAPIKEY }} --source github
 
     # - name: Setup .NET
     #   uses: actions/setup-dotnet@v3
