--- a/CalculationEngine/CalculationEngine/CalculationEngine.csproj
+++ b/CalculationEngine/CalculationEngine/CalculationEngine.csproj
@@ -4,12 +4,12 @@
     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-	<GeneratePackageOnBuild>false</GeneratePackageOnBuild>
+	<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
 	<OutputType>Library</OutputType>
 	<PackageId>CalculationEngine</PackageId>
 	<Version>1.0.0</Version>
 	<Authors>robertath</Authors>
-	<Company>Company Inc</Company>
+	<Company>robertath</Company>
 	<PackageDescription>This package for lab nuget package with git action!</PackageDescription>
 	<RepositoryUrl>https://github.com/robertath/PackageManagement-Git</RepositoryUrl>
   </PropertyGroup>
