--- a/CalculationEngine/CalculationEngine/CalculationEngine.csproj
+++ b/CalculationEngine/CalculationEngine/CalculationEngine.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
@@ -13,5 +13,12 @@
 	<PackageDescription>This package for lab nuget package with git action!</PackageDescription>
 	<RepositoryUrl>https://github.com/robertath/PackageManagement-Git</RepositoryUrl>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="NuGet.CommandLine" Version="6.4.0">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
 
 </Project>
