--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -49,12 +49,17 @@ jobs:
     - name: List sources nuget
       run: dotnet nuget list source
 
-    - name: Add package source
+    - name: Remove package source
       run: dotnet nuget remove source Source 
-      #run: dotnet nuget update source Source https://nuget.pkg.github.com/${{ github.repository_owner }}/index.json -u robertath -p ${{ secrets.NUGETAPIKEY }} --store-password-in-clear-text #if add -n github
+    
+    - name: Add package source
+      run: dotnet nuget update source https://nuget.pkg.github.com/${{ github.repository_owner }}/index.json -u robertath -p ${{ secrets.NUGETAPIKEY }} --store-password-in-clear-text --name git-robertath
 
-    # - name: Push to GitHub package registry
-    #   run: dotnet nuget push ./artifact/*.nupkg --api-key ${{ secrets.NUGETAPIKEY }} --source https://nuget.pkg.github.com/robertath/index.json
+    - name: List sources nuget
+      run: dotnet nuget list source
+    
+    - name: Push to GitHub package registry
+      run: dotnet nuget push ./artifact/*.nupkg --api-key ${{ secrets.NUGETAPIKEY }} --source git-robertath
 
 
 
