--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -43,14 +43,14 @@ jobs:
     - name: Generate a NuGet package
       run: dotnet pack ${{ env.DOTNET_PATH }}/CalculationEngine.csproj -c ${{ env.CONFIGURATION}} -o ./artifact
 
-    - name: List files
-      run: cd artifact; ls -la
+    # - name: List files
+    #   run: cd artifact; ls -la
 
     - name: List sources nuget
       run: dotnet nuget list source
 
     - name: Remove package source
-      run: dotnet nuget remove source Source 
+      run: dotnet nuget remove source github 
     
     - name: Add package source
       run: dotnet nuget add source https://nuget.pkg.github.com/${{ github.repository_owner }}/index.json -u robertath -p ${{ secrets.NUGETAPIKEY }} --store-password-in-clear-text -n github
