--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -28,6 +28,7 @@ jobs:
     - name: Setup .NET environment
       uses: actions/setup-dotnet@v1
       with:
+        name: github
         dotnet-version: '7.0.x'
         source-url: https://nuget.pkg.github.com/robertath/index.json
       env:
