--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -13,30 +13,46 @@ env:
 
 jobs:
   build:
-    # needs: build
-    # if: github.rf =='refs/heads/develop' || github.ref == 'refs/heads/main'
+      runs-on: ubuntu-latest
+
+      steps:
+      - uses: actions/checkout@v3
+
+      - name: Setup .NET
+        uses: actions/setup-dotnet@v3
+        with:
+          dotnet-version: 7.0.x
+          
+      - name: Restore dependencies
+        run: dotnet restore ${{ env.DOTNET_PATH }}        
+        
+      - name: Build
+        run: dotnet build ${{ env.DOTNET_PATH }} --no-restore -c ${{ env.CONFIGURATION}}
+        
+      - name: Test
+        run: dotnet test ${{ env.DOTNET_PATH }} --no-build --verbosity normal
+
+      - name: Pack
+        run: dotnet pack ${{ env.DOTNET_PATH }}/CalculationEngine.csproj --output ./artifacts -c ${{ env.CONFIGURATION}} 
+
+      - name: Upload Artifacts
+        uses: actions/upload-artifact@v2
+        with:
+          name: nupkg
+          path: ./artifacts/*.nupkg
+
+  deploy:
+    needs: build
+    if: github.rf =='refs/heads/develop' || github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
     steps:
     - name: Checkout repository
       uses: actions/checkout@master
 
-    # - name: Download Artifact
-    #   uses: actions/download-artifact@v1
-    #   with: 
-    #     name: nupkg
-
-    - name: Restore dependencies
-      run: dotnet restore ${{ env.DOTNET_PATH }}   
-
-    - name: Build with dotnet
-      run: dotnet build ${{ env.DOTNET_PATH }}/CalculationEngine.csproj --configuration ${{ env.CONFIGURATION }} 
-      shell: bash
-
-    - name: Generate a NuGet package
-      run: dotnet pack ${{ env.DOTNET_PATH }}/CalculationEngine.csproj -c ${{ env.CONFIGURATION}} -o ./artifact
-
-    # - name: List files
-    #   run: cd artifact; ls -la
+    - name: Download Artifact
+      uses: actions/download-artifact@v1
+      with: 
+        name: nupkg
 
     - name: List sources nuget
       run: dotnet nuget list source
@@ -48,56 +64,4 @@ jobs:
       run: dotnet nuget list source
         
     - name: Push to GitHub package registry
-      run: dotnet nuget push ./artifact/*.nupkg --api-key ${{ secrets.NUGETAPIKEY }} --source github --skip-duplicate --no-symbols
-
-
-
-    # - name: Setup .NET
-    #   uses: actions/setup-dotnet@v3
-    #   with:
-    #     dotnet-version: 7.0.x
-
-    # - name: Setup NuGet
-    #   uses: NuGet/setup-nuget@v1.0.5
-
-
-
-    # - name: Publish
-    #   run: dotnet nuget push **/*.nupkg --source github --api-key ${{ secrets.NUGETAPIKEY }}
-
-    # - name: NuGet push
-    #   run: |
-    #     dotnet nuget add source https://nuget.pkg.github.com/${{ github.repository_owner }}/index.json --name github --username ${{ github.repository_owner }} --password ${{ secrets.NUGETAPIKEY }} --store-password-in-clear-text
-    #     dotnet nuget push *.nupkg --source github
-
-
-    
-# build:
-  #   runs-on: ubuntu-latest
-
-  #   steps:
-  #   - uses: actions/checkout@v3
-
-  #   - name: Setup .NET
-  #     uses: actions/setup-dotnet@v3
-  #     with:
-  #       dotnet-version: 7.0.x
-        
-    # - name: Restore dependencies
-    #   run: dotnet restore ${{ env.DOTNET_PATH }}        
-      
-    # - name: Build
-    #   run: dotnet build ${{ env.DOTNET_PATH }} --no-restore -c ${{ env.CONFIGURATION}}
-      
-    # - name: Test
-    #   run: dotnet test ${{ env.DOTNET_PATH }} --no-build --verbosity normal
-
-    # - name: Pack
-    #   run: dotnet pack ${{ env.DOTNET_PATH }}/CalculationEngine.csproj --output ./artifacts -c ${{ env.CONFIGURATION}} -p:Version=${{ env.VERSION}}
-    #   #run: dotnet pack ${{ env.DOTNET_PATH }}/CalculationEngine.csproj --output ./artifacts -c ${{ env.CONFIGURATION}} -p:Version=$GITHUB_RUN_ID
-
-    # - name: Upload Artifacts
-    #   uses: actions/upload-artifact@v2
-    #   with:
-    #     name: nupkg
-    #     path: ./artifacts/*.nupkg
+      run: dotnet nuget push ./nupkg/*.nupkg --api-key ${{ secrets.NUGETAPIKEY }} --source github --skip-duplicate --no-symbols   
